syntax = "proto3";
package pb;

// 设备登录
message SignIn {
    int64 device_id = 1; // 设备id
    int64 user_id = 2; // 用户id
    string token = 3; // 设备token
}

// 设备登录回执
message SignInACK {
    int32 code = 1; // 错误码
    string message = 2; // 错误信息
}

// 同步消息触发
message SyncTrigger {
    int64 sync_sequence = 1; // 客户端已经同步的序列号
}

// 消息发送,todo 添加需要持久化的指令，使用场景：1：添加好友，2：申请加群，业务系统通知
message MessageSend {
    int32 receiver_type = 1; // 接收者类型，1：user;2:group
    int64 receiver_id = 2; // 用户id或者群组id
    repeated int64 warn_user_ids = 3; // 需要@的用户id
    repeated MessageBody message_body = 4; // 消息体
    int64 send_sequence = 5; // 发送序列号
    int64 send_time = 6; // 消息发送时间戳，精确到毫秒
}

// 消息体
message MessageBody {
    MessageType message_type = 1; // 消息类型
    MessageContent message_content = 2; // 消息内容
}

// 消息类型
enum MessageType {
    DEFALUT = 0; // 占位，无意义
    TEXT = 1; // 文本
    FACE = 2; // 表情
    VOICE = 3; // 声音
    IMAGE = 4; // 图片
    FILE = 5; // 文件
    LOCATION = 6; // 定位
    CUSTOM = 8; // 自定义
}

// 消息内容
message MessageContent {
    oneof content {
        Text text = 1; // 文本
        Voice voice = 2; // 语音消息
        Face face = 3; // 表情
        Image image = 4; // 图片
        File file = 5; // 文件
        Location location = 6; // 地理位置
        Custom custom = 7; // 自定义消息类型数据
    }
}

message Text {
    string text = 1; // 文本消息内容
}

message Face {
    int64 face_id = 1;
    string face_url = 2;
}

message Voice {
    string id = 1; // 语音包id
    int32 size = 2; // 语音包大小
    int32 duration = 3; // 语音时长
    string url = 4; // 语音文件URL
}

message Image {
    string id = 1; // 图片id
    int32 width = 2; // 图片宽度
    int32 height = 3; // 图片长度
    string url = 4; // 图片URL
    string thumbnail_url = 5; // 图片缩略图url
}

message File {
    int64 id = 12; // 文件id
    string name = 13; // 文件名
    int64 size = 14; // 文件大小
    string url = 15; // 文件url
}

message Location {
    string desc = 1; // 描述
    double latitude = 2; // 经度
    double longitude = 3; // 纬度
}

message Custom {
    string data = 1; // 自定义数据
}

// 消息发送回执
message MessageSendACK {
    int32 code = 1; // 错误码
    string message = 2; // 错误信息
    int64 send_sequence = 3; // 序列号
}

// 消息投递
message Message {
    int32 type = 1; // 消息投递类型，1：消息同步列表，2：消息发送列表
    repeated MessageItem messages = 2; // 消息列表
}

// 单条消息投递 todo 1.业务推送，2.指令，3：消息
message MessageItem {
    int64 message_id = 1; //消息id
    int32 sender_type = 2; // 发送者类型，1：用户，2：系统
    int64 sender_id = 3; // 发送者id
    int64 sender_device_id = 4; // 发送者设备id
    int32 receiver_type = 5; // 接收者类型，1：user;2:group
    int64 receiver_id = 6; // 用户id或者群组id
    repeated MessageBody message_body = 7; // 消息体
    Command command = 8;
    int64 sync_sequence = 9; // 同步序列号
    int64 send_time = 10; // 消息发送时间戳，精确到毫秒
}

message Command {
    int64 code = 1; // 指令码
    bytes data = 2; // 数据内容
}

// 投递消息回执
message MessageACK {
    int64 message_id = 1; // 消息id
    int64 sync_sequence = 2; //同步序列号
    int64 receive_time = 3; // 消息接收时间戳，精确到毫秒
}
